fixed player icon alignment added a placeholder tree

--- a/src/style.sass
+++ b/src/style.sass
@@ -61,7 +61,7 @@ svg
         filter: drop-shadow( 0rem -0.03rem 0rem #384043)
         transform: rotate3d(1, 0, 0, 35deg)
         font-size: 0.45rem
-        text-align: center
+        text-anchor: middle
         dominant-baseline: middle
     &.moving .player-icon
         animation: jump 600ms ease
